example and few features added

--- a/assets/stylesheets/@application.sass
+++ b/assets/stylesheets/@application.sass
@@ -2,9 +2,14 @@
 @import "bower_components/bourbon/app/assets/stylesheets/_bourbon"
 
 // mixins
-@import "mixins/mixin"
+@import "mixins/icon"
 
 @import "fonts"
 @import "vars"
 @import "defaults"
 @import "icons"
+
+// bem blocks
+@import "bem/header"
+@import "bem/content"
+@import "bem/footer"
