--- a/assets/stylesheets/vars.sass
+++ b/assets/stylesheets/vars.sass
@@ -1,6 +1,10 @@
 // fonts
 $ms: MuseoSansCyrl, Helvetica, Arial, sans-serif
+$ico: interface
 
 // colors
 $white: #fff
+$show: #FAFBF4
 $black: #000
+$green: #6CBE45
+$green_dark: #5CA43A
