--- a/assets/stylesheets/fonts.sass
+++ b/assets/stylesheets/fonts.sass
@@ -1,5 +1,7 @@
-+font-face('MuseoSansCyrl', '../fonts/MuseoSans/MuseoSansCyrl_900-webfont', 900)
-+font-face('MuseoSansCyrl', '../fonts/MuseoSans/MuseoSansCyrl_700-webfont', 700)
-+font-face('MuseoSansCyrl', '../fonts/MuseoSans/MuseoSansCyrl_500-webfont', 500)
-+font-face('MuseoSansCyrl', '../fonts/MuseoSans/MuseoSansCyrl_300-webfont', 300)
-+font-face('MuseoSansCyrl', '../fonts/MuseoSans/MuseoSansCyrl_100-webfont', 100)
++font-face('MuseoSansCyrl', 'fonts/MuseoSans/MuseoSansCyrl_900-webfont', 900)
++font-face('MuseoSansCyrl', 'fonts/MuseoSans/MuseoSansCyrl_700-webfont', 700)
++font-face('MuseoSansCyrl', 'fonts/MuseoSans/MuseoSansCyrl_500-webfont', 500)
++font-face('MuseoSansCyrl', 'fonts/MuseoSans/MuseoSansCyrl_300-webfont', 300)
++font-face('MuseoSansCyrl', 'fonts/MuseoSans/MuseoSansCyrl_100-webfont', 100)
+
++font-face('interface', 'fonts/interface/interface', normal)
