index and docs refreshed

--- a/assets/slim/index.slim
+++ b/assets/slim/index.slim
@@ -9,6 +9,6 @@
       h1 Congratulations!
       h2 You have successfully created your application.
       h3 Follow documentation:&nbsp;
-      a.content__button target="_blank" href="http://git.dowell.com.ua/shared/gulp-template/blob/master/README.md" Get started
+      a.content__button target="_blank" href="http://git.dowell.com.ua/shared/gulp-template/tree/master" Get started
 
     //= partials/footer.slim
